[package]
name = "solana-escrow-normal"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.9"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
borsh = "0.9.1"
borsh-derive = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]